--- a/japanese.html
+++ b/japanese.html
@@ -41,7 +41,7 @@
         <div class="container">
             <h2>研究</h2>
             <p> 最近は，因果推論の枠組みで，モデル選択によって生じる種々の問題を克服する方法を考察しています（選択的推論）．
-                研究に直接的つながるわけではありませんが，開発経済学，とりわけ，ジェンダーの不平等についても強い関心を持っています．</p>
+                研究に直接的につながるわけではありませんが，開発経済学，とりわけ，ジェンダーにおける不平等についても強い関心を持っています．</p>
             <p> くわしくは，<a href="index.html">ホーム</a>や<a href="research.html">研究</a>をご覧ください．</p>
             <p> ゼミや授業で使用した発表資料は，<a href="material.html">資料</a>からご覧いただけます． </p>
         </div>
