--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container">
             <h2>Research Interests</h2>
             <p>I am currently working on the following topics: Selective Inference, Post-Selection Inference, Pretesting. </p>
-            <p>I an also interested in Development Economics, especially in Gender Inequality.  </p>
+            <p>I am also interested in Development Economics, especially in Gender Inequality.  </p>
         </div>
     </section>
 
