--- a/material.html
+++ b/material.html
@@ -24,6 +24,7 @@
             <h2> <a href="https://github.com/yasu0704xx/Econometrics2025" target="_blank">Econometrics 1 & 2 (2025, Kyoto U)</a> </h2>
                 <ul>
                     <li> Nonparametric Density Estimation </li>
+                    <li> Regression Discontinuity Designs </li>
                 </ul>
        </div>
        <div class="container">
