--- a/material.html
+++ b/material.html
@@ -20,19 +20,24 @@
     </header>
 
   <section id="material">
+
+      <div class="container">
+        All materials are available on <a href="https://github.com/yasu0704xx" target="_blank">my GitHub</a>.
+      </div>
+      
        <div class="container">
             <h2> Econometrics 1 & 2 (2025, Kyoto U) </h2>
                 <ul>
-                    <li> Nonparametric Density Estimation [<a href="https://github.com/yasu0704xx/Econometrics2025/blob/main/17-1st-half-Kernel-Density-Estimation.pdf" target="_blank"> Slides </a>] </li>
-                    <li> Regression Discontinuity Designs [<a href="https://github.com/yasu0704xx/Econometrics2025/blob/main/21-Regression-Discontinuity-Designs.pdf" target="_blank"> Slides </a>] </li>
+                    <li> Nonparametric Density Estimation [<a href="https://github.com/yasu0704xx/Econometrics2025/blob/main/17-1st-half-Kernel-Density-Estimation.pdf" target="_blank">Slides</a>] </li>
+                    <li> Regression Discontinuity Designs [<a href="https://github.com/yasu0704xx/Econometrics2025/blob/main/21-Regression-Discontinuity-Designs.pdf" target="_blank">Slides</a>] </li>
                 </ul>
        </div>
        <div class="container">
             <h2> Econometrics 1 & 2 (2024, Kyoto U) </h2>
                 <ul>
-                    <li> Semiparametric Single Index Models [<a href="https://github.com/yasu0704xx/Econometrics2024/blob/main/Chapter%2008%20-%20Single%20Index%20Model.pdf" target="_blank"> Slides </a>] </li>
-                    <li> Selectivity Models [<a href="https://github.com/yasu0704xx/Econometrics2024/blob/main/Chapter%2010%20-%20Selectivity%20Models.pdf" target="_blank"> Slides </a>] </li>
-                    <li> Censored Models [<a href="https://github.com/yasu0704xx/Econometrics2024/blob/main/Chapter%2011%20-%20Censored%20Models.pdf" target="_blank"> Slides </a>] </li>
+                    <li> Semiparametric Single Index Models [<a href="https://github.com/yasu0704xx/Econometrics2024/blob/main/Chapter%2008%20-%20Single%20Index%20Model.pdf" target="_blank">Slides</a>] </li>
+                    <li> Selectivity Models [<a href="https://github.com/yasu0704xx/Econometrics2024/blob/main/Chapter%2010%20-%20Selectivity%20Models.pdf" target="_blank">Slides</a>] </li>
+                    <li> Censored Models [<a href="https://github.com/yasu0704xx/Econometrics2024/blob/main/Chapter%2011%20-%20Censored%20Models.pdf" target="_blank">Slides</a>] </li>
                 </ul>
        </div>
 
@@ -40,17 +45,17 @@
             <h2> Article Review </h2>
                 <h3> Econometrics, Statistics </h3>
                 <ul>
-                    <li> Lee, Sun, Sun and Taylor (2016, Annals of Statistics) [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Lee-Sun-Sun-Taylor-2016-Annals-of-Statistics.pdf" target="_blank"> Slides </a>] </li>
-                    <li> Roth and Sant'Anna (2023, Econometrica) [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Roth-SantAnna-2023-Econometrica.pdf" target="_blank"> Slides </a>] </li>
+                    <li> Lee, Sun, Sun and Taylor (2016, Annals of Statistics) [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Lee-Sun-Sun-Taylor-2016-Annals-of-Statistics.pdf" target="_blank">Slides</a>] </li>
+                    <li> Roth and Sant'Anna (2023, Econometrica) [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Roth-SantAnna-2023-Econometrica.pdf" target="_blank">Slides</a>] </li>
                 </ul>
                 <h3> Development Economics </h3>
                 <ul>
-                    <li> Anderson (2018, AER) [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Anderson-2018-AER.pdf" target="_blank"> Slides </a>] </li>
-                    <li> Corno, Hildebrandt and Voena (2020, Econometrica) [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Corno-Hildebrandt-Voena-2020-Econometrica.pdf" target="_blank"> Slides </a>] </li>
+                    <li> Anderson (2018, AER) [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Anderson-2018-AER.pdf" target="_blank">Slides</a>] </li>
+                    <li> Corno, Hildebrandt and Voena (2020, Econometrica) [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Corno-Hildebrandt-Voena-2020-Econometrica.pdf" target="_blank">Slides</a>] </li>
                 </ul>         
                 <h3> Empirical Industrial Organization </h3>
                 <ul>
-                    <li> Kaneko and Toyama (2025, Journal of Industrial Economics) [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Kaneko-Toyama-2025-Journal-of-Industrial-Economics.pdf" target="_blank"> Slides </a>] </li>
+                    <li> Kaneko and Toyama (2025, Journal of Industrial Economics) [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Kaneko-Toyama-2025-Journal-of-Industrial-Economics.pdf" target="_blank">Slides</a>] </li>
                     <li>  </li>
                 </ul> 
        </div>
