--- a/material.html
+++ b/material.html
@@ -56,7 +56,7 @@
                 <h3> Empirical Industrial Organization </h3>
                 <ul>
                     <li> Kaneko and Toyama (2025, Journal of Industrial Economics) [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Kaneko-Toyama-2025-Journal-of-Industrial-Economics.pdf" target="_blank">Slides</a>] </li>
-                    <li>  </li>
+                    <li> Kawai, Nakabayashi, Ortner and Chassang (2023, Review of Economic Studies) [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Kawai-Nakabayashi-Ortner-Chassang-2023-REStud.pdf" target="_blank">Slides</a>] </li>
                 </ul> 
        </div>
       
