--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
     <section id="research">
         <div class="container">
             <h2>Research Interests</h2>
-            <p>I am currently working on the following topics: Selective Inference, Post-Selection Inference, Pretesting. </p>
-            <p>I am also interested in Development Economics, especially in Gender Inequality.  </p>
+            <p>I am currently working on the following topics: Post-Selection Inference, Causal Inference, Machine Learning. 
+               I am also interested in Development Economics, especially in Gender Inequality issues. 
+            </p>
         </div>
     </section>
 
@@ -52,7 +53,7 @@
         <div class="container">
             <h2>Education</h2>
             <p><b>M.A. in Economics (Expected)</b>, Graduate School of Economics, Kyoto University, 2026 (Advisors: <a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and <a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>).</p>
-            <p><b>B.A. in Economics</b>, School of Political Science and Economics, Waseda University, 2024 (Advisor: <a href="https://w-rdb.waseda.jp/html/100000609_en.html" target="_blank">Hisatoshi Tanaka</a>).</p>
+            <p><b>B.A. in Economics</b>, School of Political Science and Economics, Waseda University, 2024 (Supervisor: <a href="https://w-rdb.waseda.jp/html/100000609_en.html" target="_blank">Hisatoshi Tanaka</a>).</p>
         </div>
     </section>
 
