--- a/material.html
+++ b/material.html
@@ -29,7 +29,7 @@
             <h2> Econometrics 1 & 2 (2025, Kyoto U) </h2>
                 <ul>
                     <li> Nonparametric Density Estimation [<a href="https://github.com/yasu0704xx/Econometrics2025/blob/main/17-1st-half-Kernel-Density-Estimation.pdf" target="_blank">Slides</a>] </li>
-                    <li> Regression Discontinuity Designs [<a href="https://github.com/yasu0704xx/Econometrics2025/blob/main/21-Regression-Discontinuity-Designs.pdf" target="_blank">Slides</a>] </li>
+                    <li> Regression Discontinuity Designs [<a href="https://github.com/yasu0704xx/Econometrics2025/blob/main/21-Regression-Discontinuity-Designs.pdf" target="_blank">Slides</a>] [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Anderson-2018-AER.pdf" target="_blank">Supple 1</a>] [<a href="https://github.com/yasu0704xx/ArticleReview/blob/main/Review-Kawai-Nakabayashi-Ortner-Chassang-2023-REStud.pdf" target="_blank">Supple 2</a>]</li>
                 </ul>
        </div>
        <div class="container">
