--- a/research.html
+++ b/research.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            Yasuyuki Matsumura <span>Graduate School of Economics, Kyoto University</span>
+            Yasuyuki Matsumura 
         </div>
         <nav class="nav">
             <a href="index.html">Home</a>
