--- a/japanese.html
+++ b/japanese.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="logo">
             松村 泰行
-            <span>まつむら やすゆき</span>
+            <span>まつむら やすゆき 京都大学 大学院経済学研究科</span>
         </div>
         <nav class="nav">
             <a href="index.html">ホーム</a>
