--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            Yasuyuki Matsumura
+            Yasuyuki Matsumura <span> Graduate School of Economics, Kyoto University </span>
         </div>
         <nav class="nav">
             <a href="index.html">Home</a>
