--- a/japanese.html
+++ b/japanese.html
@@ -9,8 +9,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            松村 泰行
-            <span>まつむら やすゆき 京都大学 大学院経済学研究科</span>
+            Yasuyuki Matsumura <span> Graduate School of Economics, Kyoto University </span>
         </div>
         <nav class="nav">
             <a href="index.html">ホーム</a>
@@ -24,6 +23,7 @@
         <div class="container">
             <h2>プロフィール</h2>
             <img src="me.jpg" alt="My Photo" class="profile-photo">
+            <p>氏名：松村 泰行（まつむら やすゆき） </p>
             <p>所属：<a href="https://www.kyoto-u.ac.jp/ja" target="_blank">京都大学</a> <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">大学院経済学研究科</a> 修士2年
             </p>
             <p>研究領域：計量経済学，数理統計学</p>
