--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <h2>About Me</h2>
             <img src="me.jpg" alt="My Photo" class="profile-photo">
-            <p>I am a second-year master's student in 
+            <p>I am <b>Yasuyuki Matsumura</b>, a second-year master's student in 
                 <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics</a>, 
                 <a href="https://www.kyoto-u.ac.jp/ja" target="_blank">Kyoto University</a>.
             </p>
