--- a/research.html
+++ b/research.html
@@ -20,6 +20,9 @@
     </header>
 
   <section id="research">
+      <div class="container">
+        All materials are available on <a href="https://github.com/yasu0704xx/Research" target="_blank">my GitHub</a>.
+      </div>
        <div class="container">
             <h2>Publications</h2>
        </div>
