--- a/japanese.html
+++ b/japanese.html
@@ -86,20 +86,31 @@
                 <li><a href="https://www.cambridge.org/core/books/causal-inference-for-statistics-social-and-biomedical-sciences/71126BE90C58F1A431FE9B2DD07938AB" target="_blank">Imbens & Rubin (2015)</a> </li>
                 <li><a href="https://mitpress.mit.edu/9780262232586/econometric-analysis-of-cross-section-and-panel-data/" target="_blank">Wooldridge (2010)</a> </li>
                 <li><a href="https://pages.stern.nyu.edu/wgreene/Text/econometricanalysis.htm" target="_blank">Greene (2017)</a> </li>
-                <li><a href="https://press.princeton.edu/books/hardcover/9780691235899/econometrics?srsltid=AfmBOop6PMmEwkbxdzOhydKjYMa3IAXQ0JoQOqO1EKZtdxQB1JjxSXhG" target="_blank">Hansen (2022)</a> </li>
                 <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S1573441205800054" target="_blank">Newey & McFadden (1994)</a> </li>
                 <li><a href="https://www.jstor.org/stable/1913622" target="_blank">Pakes & Pollard (1989)</a> </li>
                 <li><a href="https://press.princeton.edu/books/hardcover/9780691121611/nonparametric-econometrics?srsltid=AfmBOoqZhwZmqK_guGQMtUetIJXbdHd5d_cwpw_XEIyUKsTL1eqB5ZVT" target="_blank">Li & Racine (2007)</a> </li>
-                <li><a href="https://www.mostlyharmlesseconometrics.com/" target="_blank">Angrist & Pischke (2007)</a> </li>       
                 <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S1573447107040612" target="_blank">Duflo, Glennerster & Kremer (2007)</a> </li>
                 <li><a href="https://www.cambridge.org/jp/universitypress/subjects/economics/econometrics-statistics-and-mathematical-economics/impact-evaluation-treatment-effects-and-causal-analysis?format=HB&isbn=9781107042469" target="_blank">Frölich & Sperlich (2019)</a> </li>
-                <li><a href="https://mixtape.scunning.com/" target="_blank">Cunningham (2021)</a> </li>
                 <li><a href="https://link.springer.com/book/10.1007/b98818" target="_blank">Harville (1997)</a> </li>
             </ul>
             <p><b>計量経済学，数理統計学（ウェブサイト）</b></p>
             <ul>
                 <li> 奥井 <a href="https://sites.google.com/site/okuiryoeconomics/%E6%8E%88%E6%A5%AD-teaching" target="_blank">因果推論</a> </li>
                 <li> 末石 <a href="https://sites.google.com/site/naoyasueishij/teaching/nonpara?authuser=0" target="_blank">セミ・ノンパラメトリック計量分析</a> </li>
+                <li> 末石 ミクロ計量分析（末石先生のTwitterへのリンク）
+                    [<a href="https://x.com/yaonacs/status/1912703006631755832" target="_blank">Lecture 2</a>]
+                    [<a href="https://x.com/yaonacs/status/1915216763308171354" target="_blank">Lecture 3</a>]
+                    [<a href="https://x.com/yaonacs/status/1917752416726048781" target="_blank">Lecture 4</a>]
+                    [<a href="https://x.com/yaonacs/status/1922827084663038019" target="_blank">Lecture 5</a>]
+                    [<a href="https://x.com/yaonacs/status/1925364742098739687" target="_blank">Lecture 6</a>]
+                    [<a href="https://x.com/yaonacs/status/1927899885694771396" target="_blank">Lecture 7</a>]
+                    [<a href="https://x.com/yaonacs/status/1930434439999566108" target="_blank">Lecture 8</a>]
+                    [<a href="https://x.com/yaonacs/status/1932974384756715812" target="_blank">Lecture 9</a>]
+                    [<a href="https://x.com/yaonacs/status/1935510808601199092" target="_blank">Lecture 10</a>]
+                    [<a href="https://x.com/yaonacs/status/1938046752705417257" target="_blank">Lecture 11</a>]
+                    [<a href="https://x.com/yaonacs/status/1940584008368415042" target="_blank">Lecture 12</a>]
+                    [<a href="https://x.com/yaonacs/status/1943120829488992699" target="_blank">Lecture 13</a>]
+                </li>
                 <li> Shi <a href="https://users.ssc.wisc.edu/~xshi/econ715.html" target="_blank">Econometrics Methods</a> </li>
                 <li> Hansen <a href="https://users.ssc.wisc.edu/~bhansen/718/718.htm" target="_blank">NonParametric Econometrics</a> </li>
             </ul>
