--- a/japanese.html
+++ b/japanese.html
@@ -98,18 +98,18 @@
                 <li> 奥井 <a href="https://sites.google.com/site/okuiryoeconomics/%E6%8E%88%E6%A5%AD-teaching" target="_blank">因果推論</a> </li>
                 <li> 末石 <a href="https://sites.google.com/site/naoyasueishij/teaching/nonpara?authuser=0" target="_blank">セミ・ノンパラメトリック計量分析</a> </li>
                 <li> 末石 ミクロ計量分析（末石先生のTwitterへのリンク）
-                    [<a href="https://x.com/yaonacs/status/1912703006631755832" target="_blank">Lecture 2</a>]
-                    [<a href="https://x.com/yaonacs/status/1915216763308171354" target="_blank">Lecture 3</a>]
-                    [<a href="https://x.com/yaonacs/status/1917752416726048781" target="_blank">Lecture 4</a>]
-                    [<a href="https://x.com/yaonacs/status/1922827084663038019" target="_blank">Lecture 5</a>]
-                    [<a href="https://x.com/yaonacs/status/1925364742098739687" target="_blank">Lecture 6</a>]
-                    [<a href="https://x.com/yaonacs/status/1927899885694771396" target="_blank">Lecture 7</a>]
-                    [<a href="https://x.com/yaonacs/status/1930434439999566108" target="_blank">Lecture 8</a>]
-                    [<a href="https://x.com/yaonacs/status/1932974384756715812" target="_blank">Lecture 9</a>]
-                    [<a href="https://x.com/yaonacs/status/1935510808601199092" target="_blank">Lecture 10</a>]
-                    [<a href="https://x.com/yaonacs/status/1938046752705417257" target="_blank">Lecture 11</a>]
-                    [<a href="https://x.com/yaonacs/status/1940584008368415042" target="_blank">Lecture 12</a>]
-                    [<a href="https://x.com/yaonacs/status/1943120829488992699" target="_blank">Lecture 13</a>]
+                    [<a href="https://x.com/yaonacs/status/1912703006631755832" target="_blank">2</a>]
+                    [<a href="https://x.com/yaonacs/status/1915216763308171354" target="_blank">3</a>]
+                    [<a href="https://x.com/yaonacs/status/1917752416726048781" target="_blank">4</a>]
+                    [<a href="https://x.com/yaonacs/status/1922827084663038019" target="_blank">5</a>]
+                    [<a href="https://x.com/yaonacs/status/1925364742098739687" target="_blank">6</a>]
+                    [<a href="https://x.com/yaonacs/status/1927899885694771396" target="_blank">7</a>]
+                    [<a href="https://x.com/yaonacs/status/1930434439999566108" target="_blank">8</a>]
+                    [<a href="https://x.com/yaonacs/status/1932974384756715812" target="_blank">9</a>]
+                    [<a href="https://x.com/yaonacs/status/1935510808601199092" target="_blank">10</a>]
+                    [<a href="https://x.com/yaonacs/status/1938046752705417257" target="_blank">11</a>]
+                    [<a href="https://x.com/yaonacs/status/1940584008368415042" target="_blank">12</a>]
+                    [<a href="https://x.com/yaonacs/status/1943120829488992699" target="_blank">13</a>]
                 </li>
                 <li> Shi <a href="https://users.ssc.wisc.edu/~xshi/econ715.html" target="_blank">Econometrics Methods</a> </li>
                 <li> Hansen <a href="https://users.ssc.wisc.edu/~bhansen/718/718.htm" target="_blank">NonParametric Econometrics</a> </li>
