--- a/research.html
+++ b/research.html
@@ -30,6 +30,9 @@
             <h2>Unpublished Manuscripts & Work in Progress</h2>
             <ul>
                 <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li>
+                    <ul>
+                        <li>Master's Thesis (March 2026, Kyoto University)</li>
+                    </ul>
                 <li><p style="color: purple;">Inference in Post-Factor Regression: with Application to Exploration of Survey Data</p></li>    
             </ul>
        </div>
