--- a/research.html
+++ b/research.html
@@ -23,11 +23,9 @@
       <div class="container">
         All materials are available on <a href="https://github.com/yasu0704xx/Research" target="_blank">my GitHub</a>.
       </div>
+
       <div class="container">
-            <h2>Preprints</h2>
-      </div>
-      <div class="container">
-            <h2>Unpublished Manuscripts & Work in Progress</h2>
+            <h2>Work in Progress</h2>
             <ul>
                 <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li>
                     <ul>
