--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
                 <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li>
                     <ul>
                         <li>Master's Thesis (March 2026, Kyoto University)</li>
-                        <li>[<a href="Slides/25.07.28-DevEcon2-KyotoU-GitHub.pdf" target="_blank">Slides]</a> *Passcode Required </li>
+                        <li>[<a href="https://github.com/yasu0704xx/Research/Slides/25.07.28-DevEcon2-KyotoU-GitHub.pdf" target="_blank">Slides]</a> *Passcode Required </li>
                     </ul>
                 <li><p style="color: purple;">Inference in Post-Factor Regression: with Application to Exploration of Survey Data</p></li>    
             </ul>
