--- a/japanese.html
+++ b/japanese.html
@@ -78,6 +78,7 @@
                     [<a href="https://x.com/yaonacs/status/1938046752705417257" target="_blank">11</a>]
                     [<a href="https://x.com/yaonacs/status/1940584008368415042" target="_blank">12</a>]
                     [<a href="https://x.com/yaonacs/status/1943120829488992699" target="_blank">13</a>]
+                    [<a href="https://x.com/yaonacs/status/1945658948218175765" target="_blank">14</a>]
                 </li>
                 <li> Shi <a href="https://users.ssc.wisc.edu/~xshi/econ715.html" target="_blank">Econometrics Methods</a> </li>
                 <li> Hansen <a href="https://users.ssc.wisc.edu/~bhansen/718/718.htm" target="_blank">NonParametric Econometrics</a> </li>
