--- a/material.html
+++ b/material.html
@@ -27,6 +27,7 @@
        <div class="container">
             <h2> Econometrics 1 & 2 (2025, Kyoto U) </h2>
                 <ul>
+                    <li> Instructor: Prof. Yoshihiko Nishiyama</li>
                     <li> Nonparametric Density Estimation [<a href="Slides/EconometricsSeminar2025-17-Kernel-Density-Estimation.pdf" target="_blank">Slides</a>] </li>
                     <li> Regression Discontinuity Designs [<a href="Slides/EconometricsSeminar2025-21-Regression-Discontinuity-Designs.pdf" target="_blank">Slides</a>] [<a href="Slides/Review-Anderson-2018-AER.pdf" target="_blank">Anderson (2018, AER)</a>] [<a href="Slides/Review-Kawai-Nakabayashi-Ortner-Chassang-2023-REStud.pdf" target="_blank">Kawai et al. (2023, REStud)</a>]</li>
                 </ul>
@@ -34,9 +35,11 @@
        <div class="container">
             <h2> Econometrics 1 & 2 (2024, Kyoto U) </h2>
                 <ul>
+                    <li> Instructor: Prof. Yoshihiko Nishiyama</li>
                     <li> Semiparametric Single Index Models [<a href="Slides/EconometricsSeminar2024-08-Single-Index-Model.pdf" target="_blank">Slides</a>] </li>
                     <li> Selectivity Models [<a href="Slides/EconometricsSeminar2024-10-Selectivity-Models.pdf" target="_blank">Slides</a>] </li>
                     <li> Censored Models [<a href="Slides/EconometricsSeminar2024-11-Censored-Models.pdf" target="_blank">Slides</a>] </li>
+                    <li> Special thanks to <a href="https://x.com/maybementaiko" target="_blank">Meiko Matsuda</a> for her generous help with English proofreading. Arigato!</li>
                 </ul>
        </div>
 
