--- a/material.html
+++ b/material.html
@@ -29,7 +29,12 @@
                 <ul>
                     <li> Instructor: Prof. <a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a></li>
                     <li> Nonparametric Density Estimation [<a href="Slides/EconometricsSeminar2025-17-Kernel-Density-Estimation.pdf" target="_blank">Slides</a>] </li>
-                    <li> Regression Discontinuity Designs [<a href="Slides/EconometricsSeminar2025-21-Regression-Discontinuity-Designs.pdf" target="_blank">Slides</a>] [<a href="Slides/Review-Anderson-2018-AER.pdf" target="_blank">Anderson (2018, AER)</a>] [<a href="Slides/Review-Kawai-Nakabayashi-Ortner-Chassang-2023-REStud.pdf" target="_blank">Kawai et al. (2023, REStud)</a>]</li>
+                    <li> Regression Discontinuity Designs [<a href="Slides/EconometricsSeminar2025-21-Regression-Discontinuity-Designs.pdf" target="_blank">Slides</a>]</li>
+                    <ul>
+                        <li>
+                            Empirical Examples: <a href="Slides/Review-Anderson-2018-AER.pdf" target="_blank">Anderson (2018, AER)</a>, <a href="Slides/Review-Kawai-Nakabayashi-Ortner-Chassang-2023-REStud.pdf" target="_blank">Kawai et al. (2023, REStud)</a>
+                        </li>
+                    </ul>
                 </ul>
        </div>
        <div class="container">
