--- a/material.html
+++ b/material.html
@@ -72,7 +72,7 @@
             <h2> RA Bootcamp (2024) </h2>
                 <ul>
                     <li> Course Detail: Click <a href="https://www.ra-bootcamp.jp/" target="_blank">here</a>.</li>
-                    <li> Github Repository: Click <a href="https://github.com/RAbootcamp2024/trachtman2024_bakauke" target="_blank">here</a>. </li>
+                    <li> GitHub Repository: Click <a href="https://github.com/RAbootcamp2024/trachtman2024_bakauke" target="_blank">here</a>. </li>
                 </ul>
        </div>
     <footer>
