--- a/research.html
+++ b/research.html
@@ -31,7 +31,11 @@
                         <li>Master's Thesis (March 2026, Kyoto University)</li>
                         <li>[<a href="Slides/Slide-Selective-RD-Sparse-protected.pdf">Slides</a>] *Passcode Required</li>
                     </ul>
-                <li><p style="color: purple;">Inference in Post-Factor Regression: with Application to Exploration of Survey Data</p></li>    
+                <li><p style="color: purple;">Inference in Post-Factor Regression: with Application to Exploration of Survey Data</p></li> 
+                    <ul>
+                        <li>Joint work with Chisato Tachibana</li>
+                        <li>[<a href="Slides/Slides-Post-Factor-Analysis-Protected.pdf">Slides</a>] *Passcode Required</li>
+                    </ul>
             </ul>
        </div>
        <div class="container">
