--- a/research.html
+++ b/research.html
@@ -31,7 +31,7 @@
                         <li>Master's Thesis (March 2026, Kyoto University)</li>
                         <li>[<a href="Slides/Slides-Selective-RD-Sparse-Protected.pdf">Slides</a>] *Passcode Required</li>
                     </ul>
-                <li><p style="color: purple;">Inference in Post-Factor Regression: with Application to Exploration of Survey Data</p></li> 
+                <li><p style="color: purple;">Selective Inference in Post-PCA Regression</p></li> 
                     <ul>
                         <li>Joint work with Chisato Tachibana</li>
                         <li>[<a href="Slides/Slides-Post-Factor-Analysis-protected.pdf">Slides</a>] *Passcode Required</li>
