--- a/research.html
+++ b/research.html
@@ -31,10 +31,9 @@
                         <li>Master's Thesis (March 2026, Kyoto University)</li>
                         <li>[<a href="Slides/Slides-Selective-RD-Sparse-Protected.pdf">Slides</a>] *Passcode Required</li>
                     </ul>
-                <li><p style="color: purple;">Selective Inference in Post-PCA/EFA Regression</p></li> 
+                <li><p style="color: purple;">Selective Inference in Post-PCA/-EFA Regression</p></li> 
                     <ul>
                         <li>Joint work with Chisato Tachibana</li>
-                        <li>[<a href="Slides/Slides-Post-Factor-Analysis-protected.pdf">Slides</a>] *Passcode Required</li>
                     </ul>
             </ul>
        </div>
