--- a/research.html
+++ b/research.html
@@ -29,9 +29,8 @@
                 <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li>
                     <ul>
                         <li>Master's Thesis (March 2026, Kyoto University)</li>
-                        <li>[<a href="Slides/Slides-Selective-RD-Sparse-Protected.pdf">Slides</a>] *Passcode Required</li>
                     </ul>
-                <li><p style="color: purple;">Selective Inference in Post-PCA/-EFA Regression</p></li> 
+                <li><p style="color: purple;">Principal Component Regression</p></li> 
                     <ul>
                         <li>Joint work with Chisato Tachibana</li>
                     </ul>
