--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
                     <ul>
                         <li>Master's Thesis (March 2026, Kyoto University)</li>
                     </ul>
-                <li><p style="color: purple;">Principal Component Regression</p></li> 
+                <li><p style="color: purple;">Principal Component Regression in Econometrics</p></li> 
                     <ul>
                         <li>Joint work with Chisato Tachibana</li>
                     </ul>
