--- a/material.html
+++ b/material.html
@@ -48,8 +48,10 @@
             <h2> Article Review </h2>
                 <h3> Econometrics, Statistics </h3>
                 <ul>
+                    <li> Choi, Taylor and Tibshirani (2017, Annals of Statistics) [<a href="Slides/Review-Choi-Taylor-Tibshirani-2017-AoS.pdf" target="_blank">under preparation</a>]</li>
                     <li> Lee, Sun, Sun and Taylor (2016, Annals of Statistics) [<a href="Slides/Review-Lee-Sun-Sun-Taylor-2016-Annals-of-Statistics.pdf" target="_blank">Slides</a>] </li>
                     <li> Roth and Sant'Anna (2023, Econometrica) [<a href="Slides/Review-Roth-SantAnna-2023-Econometrica.pdf" target="_blank">Slides</a>] </li>
+                    <li> Taylor, Loftus and Tibshirani (2016, Annals of Statistics) [<a href="Slides/Review-Taylor-Loftus-Tibshirani-2016-AoS.pdf" target="_blank">under preparation</a>]</li>
                 </ul>
                 <h3> Development Economics </h3>
                 <ul>
