--- a/japanese.html
+++ b/japanese.html
@@ -94,6 +94,7 @@
                 <li> 末石 <a href="https://www.nippyo.co.jp/shop/book/9267.html" target="_blank">データ駆動型回帰分析：計量経済学と機械学習の融合</a> </li>
                 <li> 西山・人見 <a href="https://www.kyoritsu-pub.co.jp/book/b10031225.html" target="_blank">ノン・セミパラメトリック統計解析</a> </li>
                 <li> 川口・澤田 <a href="https://www.nippyo.co.jp/shop/book/9359.html" target="_blank">因果推論の計量経済学</a> </li>
+                <li> 星野 <a href="https://www.nippyo.co.jp/shop/book/9561.html" target="_blank">統計的仮説検定の方法論</a> </li>
                 <li> 高野 <a href="https://www.nippyo.co.jp/shop/book/9500.html" target="_blank">開発経済学：実証経済学へのいざない</a> </li>
                 <li> 田中 <a href="https://www.nippyo.co.jp/shop/book/8108.html" target="_blank">計量経済学のための数学</a> </li>
                 <li> 丸山 <a href="https://www.maruzen-publishing.co.jp/book/b10121288.html" target="_blank">経済の数学解析</a> </li>
@@ -144,3 +145,4 @@
     </footer>
 </body>
 </html>
+
