--- a/japanese.html
+++ b/japanese.html
@@ -39,7 +39,7 @@
      <section id="research">
         <div class="container">
             <h2>研究</h2>
-            <p> 最近は，因果推論の枠組みで，モデル選択によって生じる種々の問題を克服する方法を考察しています．
+            <p> 最近は，モデル選択によって生じる種々の問題を克服する方法を考察しています．
             </p>
             <p> くわしくは，<a href="index.html">ホーム</a>や<a href="research.html">研究</a>をご覧ください．</p>
             <p> ゼミや授業で使用した発表資料は，<a href="material.html">資料</a>からご覧いただけます． </p>
