--- a/material.html
+++ b/material.html
@@ -68,7 +68,7 @@
        <div class="container">
             <h2> RA Bootcamp (2024) </h2>
                 <ul>
-                    <li> Admin: Dr. <a href="https://sites.google.com/site/taiyofukai/" target="_blank">Taiyo Fukai</a> and <a href="https://www.cfurukawa.info/about" target="_blank">Chishio Furukawa</a> </li>
+                    <li> Admin: Dr. <a href="https://sites.google.com/site/taiyofukai/" target="_blank">Taiyo Fukai</a> and Dr. <a href="https://www.cfurukawa.info/about" target="_blank">Chishio Furukawa</a> </li>
                     <li> Course Detail: Click <a href="https://www.ra-bootcamp.jp/" target="_blank">here</a>.</li>
                     <li> GitHub Repository: Click <a href="https://github.com/RAbootcamp2024/trachtman2024_bakauke" target="_blank">here</a>. </li>
                 </ul>
