--- a/research.html
+++ b/research.html
@@ -27,7 +27,10 @@
             <h2>Work in Progress</h2>
             <ul>
                 <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li>
-                <li><p style="color: purple;">Principal Component Regression in Econometrics</p> with Chisato Tachibana</li> 
+                <li><p style="color: purple;">Principal Component Regression in Econometrics</p></li> 
+                    <ul>
+                        <li>Joint work with Chisato Tachibana</li>
+                    </ul>
             </ul>
        </div>
        <div class="container">
