--- a/research.html
+++ b/research.html
@@ -19,10 +19,13 @@
         </nav>
     </header>
 
-  <section id="research">
       <div class="container">
+          <button class="btn" onclick="jump('work-in-progress')">Work in Progress</button>
+          <button class="btn" onclick="jump('Publications')">Publications</button>
+          <button class="btn" onclick="jump('Awards')">Awards</button>
       </div>
 
+  <section id="work-in-progress">
       <div class="container">
             <h2>Work in Progress</h2>
             <ul>
@@ -33,9 +36,15 @@
                     </ul>
             </ul>
        </div>
+  </section>
+
+  <section id="Publications">
        <div class="container">
             <h2>Publications</h2>
        </div>
+  </section>
+
+  <section id="Awards">
        <div class="container">
             <h2>Awards</h2>
        </div>
