--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
         </nav>
       </div>
 
-  <section id="work-in-progress">
+       <div class="container">
           <h2 id="work-in-progress">Work in Progress</h2>
             <ul>
                 <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li>
