--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <h2>Research Interests</h2>
             <p>I am currently working on the following topics: Post-Selection Inference, Causal Inference, Machine Learning. 
             </p>
+            <p>
+                Plicy Learning Study Group (Kyoto U, 2025) [<a href="https://yasu0704xx.github.io/policy-learning-kyoto2025/" target="_blank">Link<a/>]
+            </p>
         </div>
     </section>
 
@@ -73,4 +76,5 @@
     </footer>
 </body>
 </html>
+
 
