--- a/japanese.html
+++ b/japanese.html
@@ -43,6 +43,7 @@
             </p>
             <p> くわしくは，<a href="index.html">ホーム</a>や<a href="research.html">研究</a>をご覧ください．</p>
             <p> ゼミや授業で使用した発表資料は，<a href="material.html">資料</a>からご覧いただけます． </p>
+            <p>  Plicy Learning 勉強会 (Kyoto U, 2025) [<a href="https://yasu0704xx.github.io/policy-learning-kyoto2025/" target="_blank">Link<a/>]</p>
         </div>
     </section>
 
@@ -133,5 +134,6 @@
     </footer>
 </body>
 </html>
+
 
 
