--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section id="research">
         <div class="container">
             <h2>Research Interests</h2>
-            <p>I am currently working on the following topics: Post-Selection Inference, Causal Inference, Machine Learning. 
+            <p>I am currently working on the following topics: Post-Selection Inference, Policy Learning. 
             </p>
             <p>
                 Plicy Learning Study Group (Kyoto U, 2025) [<a href="https://yasu0704xx.github.io/policy-learning-kyoto2025/" target="_blank">Link<a/>]
@@ -76,5 +76,6 @@
     </footer>
 </body>
 </html>
+
 
 
