--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>I am currently working on the following topics: Post-Selection Inference, Policy Learning. 
             </p>
             <p>
-                Plicy Learning Study Group (Kyoto U, 2025) [<a href="https://yasu0704xx.github.io/policy-learning-kyoto2025/" target="_blank">Link<a/>]
+                Policy Learning Study Group (Kyoto U, 2025) [<a href="https://yasu0704xx.github.io/policy-learning-kyoto2025/" target="_blank">Link<a/>]
             </p>
         </div>
     </section>
@@ -76,6 +76,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
