--- a/material.html
+++ b/material.html
@@ -66,6 +66,7 @@
                 </ul>         
                 <h3> Empirical Industrial Organization </h3>
                 <ul>
+                    <li> Farronato and Fradkin (2022, AER) [<a href="Slides/Review-Farronato-Fradkin-2022-AER.pdf" target="_blank">Slides</a>] </li>
                     <li> Kaneko and Toyama (2025, Journal of Industrial Economics) [<a href="Slides/Review-Kaneko-Toyama-2025-Journal-of-Industrial-Economics.pdf" target="_blank">Slides</a>] </li>
                     <li> Kawai, Nakabayashi, Ortner and Chassang (2023, Review of Economic Studies) [<a href="Slides/Review-Kawai-Nakabayashi-Ortner-Chassang-2023-REStud.pdf" target="_blank">Slides</a>] </li>
                 </ul> 
