--- a/material.html
+++ b/material.html
@@ -61,7 +61,7 @@
                 </ul>
                 <h3> Development Economics </h3>
                 <ul>
-                    <li> Anderson (2018, AER) [<a href="Slides/Review-Anderson-2018-AER.pdf" target="_blank">Slides</a>] </li>
+                    <li> Anderson (2018, American Economic Review) [<a href="Slides/Review-Anderson-2018-AER.pdf" target="_blank">Slides</a>] </li>
                     <li> Corno, Hildebrandt and Voena (2020, Econometrica) [<a href="Slides/Review-Corno-Hildebrandt-Voena-2020-Econometrica.pdf" target="_blank">Slides</a>] </li>
                 </ul>         
                 <h3> Empirical Industrial Organization </h3>
