--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="container">
             <h2>Experience</h2>
             <ul>
-                <li>September 2025 - Present: Research Assistant (PI: <a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">Hidenori Takahashi</a> in Kyoto Institute of Economic Research) </li>
+                <li>September 2025 - Present: Research Assistant (PI: <a href="https://sites.google.com/site/hidenoritakahashiutoronto/" target="_blank">Hidenori Takahashi</a> in Kyoto Institute of Economic Research, Kyoto University) </li>
             </ul>
         </div>
     </section>
@@ -76,6 +76,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
