--- a/material.html
+++ b/material.html
@@ -38,7 +38,7 @@
                     <li> Regression Discontinuity Designs [<a href="Slides/EconometricsSeminar2025-21-Regression-Discontinuity-Designs.pdf" target="_blank">Slides</a>]</li>
                     <li> Multiple Choice [<a href="Slides/EconometricsSeminar2025-26-2-Multiple-Choice.pdf" target="_blank">Slides</a>]</li>
                     <li> Semiparametric Single Index Models [<a href="Slides/EconometricsSeminar2025-26-3-Semipara-Single-Index.pdf" target="_blank">Slides</a>]</li>
-                    <li> Semiparametric Binary/Multinomial Choice Models [<a href="Slides/EconometricsSeminar2025-26-4-Semipara-Discrete-Choice.pdf" target="_blank">Slides</a>]</li>
+                    <li> Semiparametric Binary/Multiple Choice Models [<a href="Slides/EconometricsSeminar2025-26-4-Semipara-Discrete-Choice.pdf" target="_blank">Slides</a>]</li>
                 </ul>
        </div>
       
