--- a/japanese.html
+++ b/japanese.html
@@ -31,7 +31,7 @@
                         <a href="https://sites.google.com/view/takahide-yanagi/japanese?authuser=0" target="_blank">柳貴英</a>先生
             </p>
             <p>連絡先：matsumura.yasuyuki.w85 [at] kyoto-u.jp</p>
-            <p>住所：606-8501 京都市左京区吉田本町 法経東館406 (Research Room N-5)</p>
+            <p>オフィス：606-8501 京都市左京区吉田本町 法経東館406 (Research Room N-5)</p>
             <p>その他：<a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
         </div>
     </section>
@@ -134,6 +134,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
