--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 my research focuses on Econometric Theory and Statistics.
             </p>
             <p>Contact: matsumura.yasuyuki.w85 [at] kyoto-u.jp</p>
-            <p>Office: Reserach Room N-5 (406), The East Building, Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan</p> 
+            <p>Office: 406 (Reserach Room N-5) in the Faculty of Law & Economics East Bldg., Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan</p> 
             <p>Other Links: <a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
         </div>
     </section>
@@ -76,6 +76,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
