--- a/material.html
+++ b/material.html
@@ -36,7 +36,7 @@
                     <li> Instructor: Prof. <a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a></li>
                     <li> Nonparametric Density Estimation [<a href="Slides/EconometricsSeminar2025-17-Kernel-Density-Estimation.pdf" target="_blank">Slides</a>] </li>
                     <li> Regression Discontinuity Designs [<a href="Slides/EconometricsSeminar2025-21-Regression-Discontinuity-Designs.pdf" target="_blank">Slides</a>]</li>
-                    <li> Multiple Choice [<a href="Slides/EconometricsSeminar2025-26-2-Multiple-Choice.pdf" target="_blank">Slides</a>]</li>
+                    <li> Multiple Choice & BLP [<a href="Slides/EconometricsSeminar2025-26-2-Multiple-Choice.pdf" target="_blank">Slides</a>]</li>
                     <li> Semiparametric Single Index Models [<a href="Slides/EconometricsSeminar2025-26-3-Semipara-Single-Index.pdf" target="_blank">Slides</a>]</li>
                     <li> Semiparametric Binary/Multiple Choice Models [<a href="Slides/EconometricsSeminar2025-26-4-Semipara-Discrete-Choice.pdf" target="_blank">Slides</a>]</li>
                 </ul>
