--- a/research.html
+++ b/research.html
@@ -30,11 +30,12 @@
        <div class="container">
           <h2 id="work-in-progress">Work in Progress</h2>
             <ul>
+                <li> <p style="white-space: nowrap; margin: 0;">
+                      <span style="color:purple;">Principal Component Regression in Econometrics</span>
+                      — <span style="color:#000;">joint with Chisato Tachibana</span>
+                    </p>
+                </li>
                 <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li>
-                <li><p style="color: purple;">Principal Component Regression in Econometrics</p></li> 
-                    <ul>
-                        <li>Joint work with Chisato Tachibana</li>
-                    </ul>
             </ul>
        </div>
 
