Fix HTML formatting for joint authorship mention

--- a/research.html
+++ b/research.html
@@ -32,7 +32,7 @@
             <ul>
                 <li> <p style="white-space: nowrap; margin: 0;">
                       <span style="color:purple;">Principal Component Regression in Econometrics</span>
-                      — <span style="color:#000;">joint with Chisato Tachibana</span>
+                      <span style="color:#000;">joint with Chisato Tachibana</span>
                     </p>
                 </li>
                 <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li>
