--- a/research.html
+++ b/research.html
@@ -32,7 +32,7 @@
             <ul>
                 <li> <p style="white-space: nowrap; margin: 0;">
                       <span style="color:purple;">Principal Component Regression in Econometrics</span>
-                      <span style="color:#000;">joint with Chisato Tachibana</span>
+                      <span style="color:#000;">joint with <a href="https://www.reddy.e.u-tokyo.ac.jp/member/tachibana.html#" target="_blank">Chisato Tachibana</a></span>
                     </p>
                 </li>
                 <li><p style="color: purple;">Selective Inference in Regression Discontinuity Designs: Exploiting High-Dimensional Covariates</p></li>
